# kaggle-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
05.02-backpack/: torch-model.ipynb
05.03-rainfall/: logistic-regression.ipynb  logreg-submission.csv
