[tool.poetry]
name = "kaggle-playground"
version = "0.1.0"
description = ""
authors = ["Julian Stamp <julian.d.stamp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.1"
numpy = "^2.2.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
